<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.itcourses.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_CourseInformationFragment"
            app:destination="@id/course_information_fragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.itcourses.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">

        <action
            android:id="@+id/action_favoritesFragment_to_CourseInformationFragment"
            app:destination="@id/course_information_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.itcourses.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/course_information_fragment"
        android:name="com.example.itcourses.ui.course_information.CourseInformationFragment"
        android:label="@string/title_course_information"
        tools:layout="@layout/fragment_course_information">

        <action
            android:id="@+id/action_courseInformationFragment_to_homeFragment"
            app:destination="@id/navigation_home" />

    </fragment>

</navigation>