<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/course_information_fragment_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/default_course_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/course_information_fragment_star_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_course_info"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@id/course_information_fragment_image"
        app:layout_constraintStart_toStartOf="@id/course_information_fragment_image">

        <ImageView
            android:id="@+id/course_information_fragment_star_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star_fill" />

        <TextView
            android:id="@+id/course_information_fragment_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:paddingBottom="0.1dp"
            android:text="@string/course_info_star_default"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_information_fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_course_info"
        android:gravity="center_vertical"
        android:paddingHorizontal="6dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="@id/course_information_fragment_image"
        app:layout_constraintStart_toEndOf="@+id/course_information_fragment_star_container">

        <TextView
            android:id="@+id/course_information_fragment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:paddingBottom="0.1dp"
            android:text="@string/course_info_date_default"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/course_information_fragment_button_add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_information_fragment_icons"
        android:contentDescription="@string/add_to_favorites_button_description"
        android:importantForAccessibility="yes"
        android:padding="10dp"
        android:src="@drawable/ic_bookmark_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/course_information_fragment_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_information_fragment_icons"
        android:contentDescription="@string/add_to_favorites_button_description"
        android:importantForAccessibility="yes"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/course_information_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="6sp"
        android:paddingVertical="16dp"
        android:text="@string/course_info_title_default"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_information_fragment_image" />


    <androidx.cardview.widget.CardView
        android:id="@+id/course_information_author_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_information_fragment_title">

        <ImageView
            android:id="@+id/course_information_author_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/author_image" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/course_information_author_card"
        app:layout_constraintStart_toEndOf="@+id/course_information_author_card"
        app:layout_constraintTop_toTopOf="@id/course_information_author_card">


        <TextView
            android:id="@+id/course_information_author_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:text="@string/course_information_fragment_author"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/course_information_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.015"
            android:lineSpacingExtra="2sp"
            android:text="@string/course_information_fragment_author_default"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.015"
        android:lineSpacingExtra="6sp"
        android:text="@string/button_start_course"
        android:textSize="14sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_information_author_card"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_to_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="?attr/colorOnSurface"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing="0.015"
        android:lineSpacingExtra="6sp"
        android:text="@string/button_go_to_platform"
        android:textSize="14sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_course"></com.google.android.material.button.MaterialButton>


    <TextView
        android:id="@+id/course_information_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="6sp"
        android:text="@string/title_course_information"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_go_to_platform" />

    <TextView
        android:id="@+id/course_information_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:alpha="0.7"
        android:fontFamily="@font/roboto_regular"
        android:letterSpacing="0.025"
        android:lineSpacingExtra="6sp"
        android:text="@string/course_information_fragment_text"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_information_title" />

</androidx.constraintlayout.widget.ConstraintLayout>