<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="114dp"
    android:background="?attr/colorSurface"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/course_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/course_image"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_course_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/course_info_star_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_course_info"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    app:layout_constraintBottom_toBottomOf="@id/course_image"
                    app:layout_constraintStart_toStartOf="@id/course_image">

                    <ImageView
                        android:id="@+id/course_info_star_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_star_fill" />

                    <TextView
                        android:id="@+id/course_info_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.04"
                        android:lineSpacingExtra="2sp"
                        android:paddingBottom="0.1dp"
                        android:text="@string/course_info_star_default"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/course_info_date_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_course_info"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    app:layout_constraintBottom_toBottomOf="@id/course_image"
                    app:layout_constraintStart_toEndOf="@+id/course_info_star_container">

                    <TextView
                        android:id="@+id/course_info_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.04"
                        android:lineSpacingExtra="2sp"
                        android:paddingBottom="0.1dp"
                        android:text="@string/course_info_date_default"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/button_add_to_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/rounded_course_add_to_favorites"
                    android:contentDescription="@string/add_to_favorites_button_description"
                    android:importantForAccessibility="yes"
                    android:padding="6dp"
                    android:src="@drawable/ic_bookmark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/course_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.015"
            android:lineSpacingExtra="2sp"
            android:paddingBottom="12dp"
            android:text="@string/course_info_title_default"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_image_container" />


        <TextView
            android:id="@+id/course_info_progress_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:text="@string/course_info_progress_percent_default"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_info_title" />


        <TextView
            android:id="@+id/course_info_progress_lessons_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:text="@string/course_info_progress_lessons_from"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_info_title" />

        <TextView
            android:id="@+id/course_info_progress_lessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="2sp"
            android:text="@string/course_info_progress_lessons_default"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/course_info_progress_lessons_from"
            app:layout_constraintTop_toBottomOf="@id/course_info_title" />


        <ProgressBar
            android:id="@+id/course_info_progress_bar_line"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/rounded_progress_bar"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_info_progress_lessons" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>