<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_nav_bg"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/nav_home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/nav_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:includeFontPadding="false"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="3sp"
            android:paddingTop="4dp"
            android:text="@string/title_home"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/nav_favorites_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_favorites" />


        <TextView
            android:id="@+id/nav_favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:includeFontPadding="false"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="3sp"
            android:paddingTop="4dp"
            android:text="@string/title_favorites"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/nav_account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/nav_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semibold"
            android:includeFontPadding="false"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="3sp"
            android:paddingTop="4dp"
            android:text="@string/title_account"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>